--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,16 @@
     </scm>
     <properties>
         <java.version>23</java.version>
+        <spring-security.version>6.4.2</spring-security.version>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.3.3.RELEASE</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
