--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
+    "react-toggle": "^4.1.3",
+    "use-local-storage": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
