--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
+    "react-i18next": "^15.4.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.28.1",
