--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=demo
-spring.data.mongodb.uri=mongodb+srv://mikisz2002:gJXawnACwsW7dZWf@cluster0.8gupv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=mongodb+srv://mikisz2002:nyDf7sjtzKeQwWGX@cluster0.8gupv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=Accounts
